--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Matemática Aplicada"
+title: "Grupo de estudio y discusión interclaustros"
 listing:
   contents: posts
   sort: "date desc"
@@ -11,6 +11,10 @@ page-layout: full
 title-block-banner: true
 ---
 
-Hola, este es un blog de Quarto para la orientación aplicada de la carrera de Matemática de la UBA.
+Hola, este es un blog para la **orientación aplicada** de la carrera de Matemática de la UBA.
 
 La idea es que aquí iremos subiendo algunos recursos, desde links a papers interesantes, a notas de clases.
+
+Está hecho [Quarto](https://quarto.org) markwdown, con lo cual se puede incluir fácilmente tanto Latex como código ejecutable. Para editar la página o agregar un post, pueden ir al [repositorio open-source](https://github.com/Matematica-Aplicada/matematica-aplicada.github.io) que contiene el proyecto hecho en Quarto. PRs bienvenidos!
+
+## Blog
